# tactile_sensors

./: .gitignore  LICENSE  README.md
firmware/: README.md  bootloader_host.py
sdk_cpp/: .gitignore  CMakeLists.txt  Quick_start.cpp  README.md  RobotiqTactileSensor.cpp  RobotiqTactileSensor.h  circular_buffer.h  finger_data.h  setup_and_run.sh  test_data_flow.cpp  test_packet_analysis.cpp
sensor_quickstart/: .gitignore  README.md  protocol.py  quick_connect.py  record_data.py  requirements.txt  run_quick_connect.bat  run_quick_connect.sh  run_quick_connect_mac.sh  run_web_viewer.bat  run_web_viewer.sh  run_web_viewer_mac.sh  web_viewer.py
sensor_quickstart/web/: app.js  index.html  style.css
tactile_sensor_ui/: .dockerignore  README.md  run_tactilesensorUI.sh  run_tactilesensorUI_windows.bat
tactile_sensor_ui/Docker/: Dockerfile_UI
tactile_sensor_ui/tactile_sensor_ui/: .gitignore  CMakeLists.txt  README.md
tactile_sensor_ui/tactile_sensor_ui/src/: circular_buffer.h  communicator.cpp  communicator.h  connection.cpp  finger_data.h  graphics.cpp  log.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/scripts/: apply_udev_rule.sh  ensure_docker.sh  ensure_docker_image.sh  find_sensor_devices.sh  set_sensor_permissions.sh  setup_xhost.sh
utils/udev/: 99-rq-tsf85.rules
utils/windows/: attach_usb_to_wsl.bat  ensure_docker_desktop.bat  ensure_hypervisor.bat  ensure_usbipd.bat  ensure_wsl.bat
